samples/_failures_safe/1761159291_2154db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f1e9552.c: In function ‘process_input’:
./samples/SAFE/__tmp_9f1e9552.c:136:5: error: expected declaration or statement at end of input
  136 |     }
      |     ^
